--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: cd my-website && npm ci
       - name: Build website
-        run: cd my-website && npm run build && npm run serve
+        run: npm run build && npm run serve
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
