--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+#   workflow_dispatch:
 
 permissions:
   contents: write
@@ -21,8 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: cd my-website && npm ci
+
       - name: Build website
-        run: npm run build && npm run serve
+        run: ls && npm run build && npm run serve
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
