--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - main
     paths:
       - '.github/workflows/deploy.yml'
-      - 'website/**'
+      - 'my-website/**'
   pull_request:
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
           node-version: '14'
 
       - name: Get yarn cache
-        id: yarn-cache
-        run: echo "YARN_CACHE_DIR=$(yarn cache dir)" >> "${GITHUB_OUTPUT}"
+        id: npm-cache
+        run: echo "NPM_CACHE_DIR=$(npm cache dir)" >> "${GITHUB_OUTPUT}"
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -41,8 +41,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-website-
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - run: npm ci
+      - run: npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
