--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-website-
 
-      - run: npm ci
+      - run: npm install
       - run: npm run build
 
       - name: Deploy
