--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,36 @@
-# .github/workflows/deploy.yml
-
-name: GitHub Pages
-
+name: Deploy to GitHub Pages
 on:
   push:
     branches:
       - main
-    paths:
-      - '.github/workflows/deploy.yml'
-      - 'my-website/**'
-  pull_request:
+#   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
-    defaults:
-      run:
-        working-directory: my-website
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
+      - name: Install dependencies
+        run: cd my-website && npm ci
 
-      - run: npm install
-      - run: npm run build
+      - name: Build website
+        run: cd my-website && npm run build
 
-      - name: Deploy
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./my-website/build
+          # Build output to publish to the `gh-pages` branch:
+          publish_dir: ./my-website /build
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
           enable_jekyll: false
