--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,14 +46,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+          key: node-modules-${{ hashFiles('my-website/package-lock.json') }}
 
       - name: Install dependencies
         if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-        run: npm ci
+        run: cd my-website && npm ci
 
       - name: Build website
-        run: cd my-website && npm run build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
