--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
       - main
     paths:
       - 'my-website/**'
+      - '.github/workflows'
   repository_dispatch:
     types: [push-content]
 
@@ -45,7 +46,7 @@ jobs:
         id: cache
         uses: actions/cache@v4
         with:
-          path: node_modules
+          path: my-website/node_modules
           key: node-modules-${{ hashFiles('my-website/package-lock.json') }}
 
       - name: Install dependencies
